--- a/js/util/roomSlide-room.html
+++ b/js/util/roomSlide-room.html
@@ -3,7 +3,7 @@
         <div ms-css-background-image="url({{urlAPINet + el.coverUrl}})">
             <label style="display: inline-block;width: 115px;">
                 <span style="position: relative;top: -6px;right: -3px;color: #999;">￥</span>
-                <span class="slide-price">{{type?(el.minPrice*6):el.minPrice}}</span>
+                <span class="slide-price">{{type?round(el.minPrice*6):el.minPrice}}</span>
                 <span>/{{type==1?"3小时":"晚起"}}</span>
                 <span class="roomtype">{{el.roomType.name}}&nbsp;&nbsp;{{el.name.indexOf('NO')>-1?el.name.slice(3):el.name}}</span>
             </label>
