入住时间默认选第二个 弹窗按钮调小 房间页面的房间设施swiper背景色一致 页面加载优化，减少白屏时间 下单交互，不再提示，自动弹框

--- a/js/pages/alipay/alipay-iframe.html
+++ b/js/pages/alipay/alipay-iframe.html
@@ -5,5 +5,5 @@
     }
 </style>
 <iframe id="myiframe" ms-controller="alipay" ms-attr-src="payUrl" scrolling="auto" frameborder="0">
-赞不支持该功能！
+暂不支持该功能！
 </iframe>
