--- a/js/pages/hotel/hotelFeature.html
+++ b/js/pages/hotel/hotelFeature.html
@@ -1,25 +1,25 @@
 <style>
     .hotel-feature section {
-        margin: 10px 0;
-        font-size: 17px;
+        margin: 15px 0;
+        font-size: 15px;
     }
     .hotel-feature section>div {
         margin: 15px 0;
-        font-size: 15px;
+        font-size: 12px;
         display: flex;
-        justify-content: space-around;
         flex-wrap: wrap;
     }
     .hotel-feature .item{
+        width: 25%;
         text-align: center;
-        margin: 10px 0;
+        margin: 15px 0;
     }
     .hotel-feature img {
-        width: 36px;
-        height: 36px;
+        width: 22px;
+        height: 22px;
     }
 </style>
-<div ms-controller="hotel" class="bs-bg-white bs-text-black hotel-feature" style="padding: 15px;height: 80vh;overflow-y: auto;">
+<div ms-controller="hotel" class="bs-bg-white bs-text-black hotel-feature" style="padding: 20px;height: 80vh;overflow-y: auto;">
     <section>
         酒店服务
         <div>
