--- a/js/pages/hotel/hotel.html
+++ b/js/pages/hotel/hotel.html
@@ -24,8 +24,8 @@
                             <i>{{alias}}酒店&nbsp;</i><i>one'own</i>
                         </td> -->
                         <td class="mui-ellipsis small" valign="top">
-                            <i class="bs-text-x-larger" style="font-weight: 900;">{{alias}}酒店&nbsp;</i><i class="bs-text-larger" style="font-weight: 100;">One's Own</i><br />
-                            <i class="bs-text-normal" style="margin-top: 4px;color: #bcad85;" ms-on-tap="openNav">
+                            <i class="bs-text-x-larger" style="font-weight: 900;">{{alias}}&nbsp;</i><i class="bs-text-larger" style="font-weight: 100;">One's Own</i><br />
+                            <i class="bs-text-small bs-text-gold" style="max-width: 90%;margin-top: 4px;white-space: normal;" ms-on-tap="openNav">
                                 <img src="img/icon/position.png" alt="" style="width: 17px;position: relative;top: 2px;">
                             {{address}} {{distance?distance+'km':''}}
                             </i>
@@ -36,7 +36,7 @@
                     </tr>
                 </table>
             </button>
-            <div class="bs-bg-white bs-text-small info">
+            <div class="bs-bg-white bs-text-smaller info">
                 <div ms-on-tap="openIntroduction">
                     <img src="img/icon/intro.png" alt="">
                     <br>酒店介绍
@@ -87,7 +87,7 @@
         </div>
         
         <!-- 房型筛选 -->
-        <div class="typeFilter bs-text-larger" ms-visible="isShowRoomTypeFilter">
+        <div class="typeFilter bs-text-large" ms-visible="isShowRoomTypeFilter">
             <div class="typeFilter-item" ms-class="active:tid==''" ms-on-tap="selectRoomType('')">all</div>
             <div class="typeFilter-item" ms-class="active:tid==el.id" ms-repeat="roomTypeList" ms-on-tap="selectRoomType(el.id)" data-repeat-rendered="showRoomTypeFilter">{{el.name}}</div>
         </div>
