--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -1,12 +1,12 @@
 <div id="popModule" style="display: none;" class="hide" ms-controller="aside" >
     <div class="content">
-        <div class="mui-content-padded mui-text-center">
-            <div class="circle" style="width: 104px;height: 104px;margin: 20px auto 8px auto;border: 1px solid #baa074;">    
+        <div class="mui-text-center bs-bg-white" style="padding-top: 20px;">
+            <div class="circle" style="width: 104px;height: 104px;margin: 0px auto 8px auto;border: 1px solid #baa074;">    
                 <div class="circle" style="margin: 0 auto;width: 96px;height: 96px;background-size: cover;background-position: center;position:relative;top: 3px;" ms-css-background-image='url({{headImg}})' ms-on-touchend="changeImg">
                     <img src="../img/edit-small.png" style="position: absolute;background: #fff;border-radius: 50%;bottom: 2px;left: 72px;width: 18px;"/>
                 </div>
            </div> 
-            <div class="bs-text-large" style="font-weight: lighter;margin-bottom: 10px;">{{nickName}}</div>
+            <div class="bs-text-large" style="font-weight: lighter;padding-bottom: 10px;">{{nickName}}</div>
         </div>
 
         <div class="control bs-bg-black bs-text-white">
@@ -93,6 +93,6 @@
             </div>
         </div>
         
-        <button id='closebtn' class="closeButton"></button>
+        <button id='closebtn' class="popover-Button popover-Button-close"></button>
     </div>
 </div>
