--- a/js/util/roomSlide-room.html
+++ b/js/util/roomSlide-room.html
@@ -12,8 +12,8 @@
     <div class="swiper-container swiper3 hotel-room-amenity">
         <div class="swiper-wrapper" style="padding-left: 0;">
             <div class="swiper-slide hotel-room-amenity-item" ms-repeat-cl="el.amenityList" data-repeat-rendered="swiper3Render">
-                <img ms-attr-src="urlAPINet + cl.ico" ms-attr-alt="cl.name" style="width: 20px;height: 20px;margin-left: 5px" />
-                <label class="bs-text-small hotel-room-amenity-text">{{cl.name}}</label>
+                <img ms-attr-src="urlAPINet + cl.ico" ms-attr-alt="cl.name" style="width: 22px;height: 22px;margin-left: 5px" />
+                <label class="bs-text-smaller hotel-room-amenity-text">{{cl.name}}</label>
             </div>
             <div class="swiper-scrollbar"></div>
         </div>
