--- a/js/pages/register/register-1.html
+++ b/js/pages/register/register-1.html
@@ -33,7 +33,7 @@
 		<br />
 	    <input type="tel" placeholder="输入手机号码" ms-duplex="phone" id="ipt">
 	    <br />
-	    <p class="text-white"><span>我已阅读并同意</span><a href="javascript:void(0)" ms-on-tap="clickA" class="bs-text-gold">用户协议</a></p>
+	    <p class="text-white"><span>我已阅读并同意</span><a href="javascript:void(0)" ms-click="clickA" class="bs-text-gold">用户协议</a></p>
 	    <br />
 	    <button class="mui-btn mui-btn-danger btnNext mui-btn-block" ms-click="goVertify">下一步</button>
 	</div>
