添加头像编辑页面

--- a/js/pages/room/room.html
+++ b/js/pages/room/room.html
@@ -54,7 +54,9 @@
                         {{end|html}}
                     </div>
                 </div>
-                <hr style="margin: 20px 10px;">
+
+                <hr ms-if="!type" style="margin-top: 0px;margin-bottom: 20px;">
+
                 <div class="time-clock" ms-if="!type">
                     <span class="bs-text-smaller" style="color: #fff;background-color: #000;    display: inline-block;width: 61px;text-align: center;margin-right: 10px;">教你省钱</span>
                     <span class="bs-text-small">越晚入住越省钱哦！</span>
