--- a/js/pages/hotel/hotel.html
+++ b/js/pages/hotel/hotel.html
@@ -24,7 +24,7 @@
                             <i>{{alias}}酒店&nbsp;</i><i>one'own</i>
                         </td> -->
                         <td class="mui-ellipsis small" valign="top">
-                            <i class="bs-text-x-larger" style="font-weight: 900;">{{alias}}&nbsp;</i><i class="bs-text-larger" style="font-weight: 100;">One's Own</i><br />
+                            <i class="bs-text-x-larger" style="font-weight: 900;">{{name}}&nbsp;</i><i class="bs-text-larger" style="font-weight: 100;">{{alias}}</i><br />
                             <i class="bs-text-small bs-text-gold" style="max-width: 90%;margin-top: 4px;white-space: normal;" ms-on-tap="openNav">
                                 <img src="img/icon/position.png" alt="" style="width: 17px;position: relative;top: 2px;">
                             {{address}} {{distance?distance+'km':''}}
