--- a/js/pages/franchisee/record.html
+++ b/js/pages/franchisee/record.html
@@ -1,13 +1,17 @@
-<div class="bs-bg-white bs-text-larger fr-padding-20">交易记录</div>
-<div class="bs-bg-white bs-text-large" ms-controller="chart">
-    <div class="fr-flex" style="border-bottom: 1px solid #ddd;" ms-for="el in @list">
-        <div class="today-list-item">
-            {{el.content}}
-            <br>
-            <span class="bs-text-smaller bs-text-gray">{{el.start}}</span>
-        </div>
-        <div class="today-list-item" style="line-height: 43px;">
-            {{(el.type?'+':'-') + ' ' + el.change}}
+<div id="pullrefresh" class="mui-scroll-wrapper">
+    <div class="mui-scroll">
+        <div class="bs-bg-white bs-text-larger fr-padding-20">交易记录</div>
+        <div class="bs-bg-white bs-text-large" ms-controller="chart">
+            <div class="fr-flex" style="border-bottom: 1px solid #ddd;" ms-for="el in @list">
+                <div class="today-list-item">
+                    {{el.description}}
+                    <br>
+                    <span class="bs-text-smaller bs-text-gray">{{el.createTime}}</span>
+                </div>
+                <div class="today-list-item" style="line-height: 43px;">
+                    {{(el.type==1?'+':'-') + ' ' + el.amount}}
+                </div>
+            </div>
         </div>
     </div>
 </div>
