个人中心的菜单判断是否显示“我的酒店”

--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -55,10 +55,10 @@
                     <div class="bs-text-smaller bs-text-black">体验基金</div>
                 </a>
             </div>
-            <div class="center-nav-item" ms-on-tap="clickA(8)" ms-visible="isAdmin!=1">
+            <div class="center-nav-item" ms-on-tap="clickA(8)" ms-visible="isAlliance==1">
                 <a href="javascript:void(0)" >
                     <img src="../img/icon/switch.png" class="grid-icon" />
-                    <div class="bs-text-smaller bs-text-black">店主模式</div>
+                    <div class="bs-text-smaller bs-text-black">我的酒店</div>
                 </a>
             </div>
             <div class="center-nav-item" ms-on-tap="clickA(5)" ms-visible="isAdmin==1&&!isManage">
