--- a/js/pages/hotel/hotel.html
+++ b/js/pages/hotel/hotel.html
@@ -1,12 +1,12 @@
 <div id="pullrefresh" class="mui-scroll-wrapper" ms-controller="hotel" ms-on-swipeup="su" ms-on-swipedown="sd">
     <div class="mui-scroll">
-        <br><br>
-        <div style="position: absolute;top: 285px;z-index: 10;right: 0;padding-right: 10px;">
-            <button type="button" class="calender-icon" ms-css-background-image="type?'url(img/clock.png)':'url(img/calender.png)'" ms-on-tap="openTimePanel">
-            <div class="bs-text-red" ms-if="!type" style="margin: 7px 1px 0 0;">{{getToday('day')}}</div>
+        <div style="position: absolute;top: 40vh;z-index: 10;right: 0;padding-right: 10px;">
+            <button type="button" class="calender-icon bs-bg-red" ms-css-background-image="type?'url(img/clock.png)':'url(img/calender.png)'" ms-on-tap="openTimePanel">
+            <div class="bs-text-white bs-text-smaller" ms-if="!type" style="margin: 9px 1px 0 0;">{{getToday('day')}}</div>
             </button>
         </div>
-        <div class="swiper-container swiper1" style="height: 280px;">
+        <div class="bs-text-white bs-text-smaller" style="position: fixed;padding: 0 12px;top: 39vh;left: 0;z-index: 9;background: rgba(0,0,0,0.5);">距离 <span style="position: relative;top: 1px;">{{round(distance/1000,1)}} km</span></div>
+        <div class="swiper-container swiper1" style="height: 45vh;">
             <div class="swiper-wrapper">
                 <div class="swiper-slide" ms-repeat="galleryList" data-repeat-rendered="swiper1Render">
                     <div style="width: 100%;height: 100%;background-size: cover;background-position: center;" ms-css-background-image="'url(' + urlAPINet + el.imgUrl+')'">
@@ -57,39 +57,17 @@
                     <br>酒店周边
                 </div>
             </div>
-            <!-- 老的酒店展开面板-->
-            <!-- <div class="info bs-text-small">
-                <div ms-repeat="surplusList">
-                    <a href="javascript:void(0);">
-                        {{el.name}}<br>
-                        剩余{{el.surplus}}间
-                    </a>
-                </div>
-            </div>
-            <div class="text-info bs-bg-white">
-                <p style="padding: 15px 10px;">{{introduction| truncate(200,'...')}}</p>
-                <ul>
-                    <li>
-                        <a ms-on-tap="openNav(lat,lng,name,address)">
-                            <h5>{{alias}}酒店：{{address}}</h5> 
-                         <span class="mui-badge mui-badge-success" style="background-color:black;">&nbsp;跟我走<span class="mui-icon mui-icon-location" style="font-size:20px"></span></span>
-                        </a>
-                    </li>
-                    <div class="bs-text-gray bs-text-large" style="padding: 10px;">酒店特色</div>
-                    <li class="bs-text-small" ms-repeat="featureList" ms-on-tap="openFeature(el)" >
-                        <a class="mui-navigate-right" style="padding: 10px;">
-                            <span style="margin-right:10px">{{el.title}}</span>
-                        </a>
-                        <hr>
-                    </li>
-                </ul>
-            </div> -->
         </div>
         
         <!-- 房型筛选 -->
-        <div class="typeFilter bs-text-large" ms-visible="isShowRoomTypeFilter">
-            <div class="typeFilter-item" ms-class="active:tid==''" ms-on-tap="selectRoomType('')">all</div>
-            <div class="typeFilter-item" ms-class="active:tid==el.id" ms-repeat="roomTypeList" ms-on-tap="selectRoomType(el.id)" data-repeat-rendered="showRoomTypeFilter">{{el.name}}</div>
+        <div class="typeFilter bs-text-large" ms-on-tap="openRoomFilter()">
+           <!-- <div class="typeFilter-item" ms-class="active:tid==''" ms-on-tap="selectRoomType('')">all</div>
+            <div class="typeFilter-item" ms-class="active:tid==el.id" ms-repeat="roomTypeList" ms-on-tap="selectRoomType(el.id)" data-repeat-rendered="showRoomTypeFilter">{{el.name}}</div> -->
+            <div class="typeFilter-item">
+                <img src="img/icon/filter.png" alt="">
+            </div>
+            <div class="typeFilter-item" style="margin: 17px 0 0 5px;">房型筛选
+            </div>
         </div>
         
         <div style="width: 90%;margin: 0 auto;">
