首页接受操作类型参数，打开面板 换注册页面背景图 个人中心图标显示隐藏bug修改 替换管理模式下的logo

--- a/js/pages/hotel/hotel.html
+++ b/js/pages/hotel/hotel.html
@@ -64,9 +64,9 @@
            <!-- <div class="typeFilter-item" ms-class="active:tid==''" ms-on-tap="selectRoomType('')">all</div>
             <div class="typeFilter-item" ms-class="active:tid==el.id" ms-repeat="roomTypeList" ms-on-tap="selectRoomType(el.id)" data-repeat-rendered="showRoomTypeFilter">{{el.name}}</div> -->
             <div class="typeFilter-item">
-                <img src="img/icon/filter.png" alt="">
+                <img src="img/icon/filter.svg" alt="" style="width: 32px;">
             </div>
-            <div class="typeFilter-item" style="margin: 17px 0 0 5px;">房型筛选
+            <div class="typeFilter-item bs-text-51" style="margin: 17px 0 0 5px;">房型筛选
             </div>
         </div>
         
