--- a/js/pages/register/register-2.html
+++ b/js/pages/register/register-2.html
@@ -59,7 +59,7 @@
         border: 1px solid black !important;
     }
 </style>
-<div ms-controller="register" style="overflow: hidden;background: url('img/11111.jpg') center;background-size: cover;height: 100vh;width: 100vw;padding:20px 50px;">
+<div ms-controller="register" style="overflow: hidden;background: url('img/reg-bg.png') center;background-size: cover;height: 100vh;width: 100vw;padding:20px 50px;">
     <div style="margin: 0 auto;text-align: center;">
         <div id="code" class="active" style="text-align: center;" tabindex="0">
             <!-- <label style="color:white">验证码：</label> -->
