--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -55,19 +55,20 @@
                     <div class="bs-text-smaller bs-text-black">体验基金</div>
                 </a>
             </div>
-            <div class="center-nav-item" ms-on-tap="clickA(8)" ms-visible="isAlliance==1">
+            <div class="center-nav-item" ms-on-tap="clickA(8)" ms-visible="isAlliance&&!isManage">
                 <a href="javascript:void(0)" >
                     <img src="../img/icon/switch.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">我的酒店</div>
                 </a>
             </div>
-            <div class="center-nav-item" ms-on-tap="clickA(5)" ms-visible="isAdmin==1&&!isManage">
+            <div class="center-nav-item" ms-visible="!isAlliance&&!isManage"></div>
+            <div class="center-nav-item" ms-on-tap="clickA(5)" ms-visible="isAdmin&&!isManage">
                 <a href="javascript:void(0)" >
                     <img src="../img/icon/switch.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">管理模式</div>
                 </a>
             </div>
-            <div class="center-nav-item" ms-visible="!isManage">
+            <div class="center-nav-item" ms-visible="!isAdmin&&!isManage">
                 <!-- <a href="javascript:void(0)">
                     <img src="../img/icon/shopping.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">购物</div>
