--- a/js/pages/order/orderList.html
+++ b/js/pages/order/orderList.html
@@ -47,8 +47,12 @@
                 <span ms-if="el.orderRoomList.length>1">等{{el.orderRoomList.length}}间房</span>
                 <br>
                 <span style="display: inline-block; margin-top: 8px;">
-                    {{formatDate(el.orderRoomList[0].startTime)}} - {{formatDate(el.orderRoomList[0].endTime)}}
-                &nbsp;&nbsp;共{{el.orderRoomList[0].timeCount}}晚
+                    <!-- 全天房 -->
+                    <span ms-if="!el.isPartTime">{{formatDate(el.orderRoomList[0].startTime)}} - {{formatDate(el.orderRoomList[0].endTime)}} &nbsp;共 {{el.orderRoomList[0].timeCount}} 晚 {{getHourTime(el.orderRoomList[0].startTime)}} 开始入住
+                    </span>
+                    <!-- 时租房 -->
+                    <span ms-if="el.isPartTime">{{formatDate(el.orderRoomList[0].startTime)}} {{getHourTime(el.orderRoomList[0].startTime)}} - {{getHourTime(el.orderRoomList[0].endTime)}} &nbsp;共 {{el.orderRoomList[0].timeCount}} 小时
+                    </span>
                 </span>
             </h5>
             <button class="bs-text-small" type="button" ms-click="goDetail(el.id)">{{showActionText(el.status)}}</button>
@@ -68,8 +72,12 @@
                 <span ms-if="el.orderRoomList.length>1">等{{el.orderRoomList.length}}间房</span>
                 <br>
                 <span style="display: inline-block; margin-top: 8px;">
-                    {{formatDate(el.orderRoomList[0].startTime)}} - {{formatDate(el.orderRoomList[0].endTime)}}
-                &nbsp;&nbsp;共{{el.orderRoomList[0].timeCount}}晚
+                    <!-- 全天房 -->
+                    <span ms-if="!el.isPartTime">{{formatDate(el.orderRoomList[0].startTime)}} - {{formatDate(el.orderRoomList[0].endTime)}} &nbsp;共 {{el.orderRoomList[0].timeCount}} 晚 {{getHourTime(el.orderRoomList[0].startTime)}} 开始入住
+                    </span>
+                    <!-- 时租房 -->
+                    <span ms-if="el.isPartTime">{{formatDate(el.orderRoomList[0].startTime)}} {{getHourTime(el.orderRoomList[0].startTime)}} - {{getHourTime(el.orderRoomList[0].endTime)}} &nbsp;共 {{el.orderRoomList[0].timeCount}} 小时
+                    </span>
                 </span>
             </h5>
             <button class="bs-text-small" type="button" ms-if="!(el.status==4&&el.iscomment==1)" ms-click="goDetail(el.id)">{{showActionText(el.status)}}</button>
